--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server",
-     "postinstall": "npm install"
+    "start": "nodemon server"
   },
   "keywords": [],
   "author": "",
